Creación de funcionalidad completa para solicitud de certificados

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -28,7 +28,7 @@
         <li>
           <a
             class="dropdown-item"
-            routerLink="/constancias"
+            routerLink="/certifieds"
             style="cursor: pointer"
           >
             <li><i class="bi bi-file-text"></i> Constancias</li></a
