--- a/src/app/pages/show/show.component.html
+++ b/src/app/pages/show/show.component.html
@@ -59,6 +59,7 @@
             name="observaciones"
             rows="5"
             value="{{ materia.observaciones }}"
+            readonly
           ></textarea>
         </div>
       </div>
