--- a/src/app/pages/certified/certified.component.html
+++ b/src/app/pages/certified/certified.component.html
@@ -14,7 +14,7 @@
     </a>
   </div>
 
-  <app-certificados-table></app-certificados-table>
+  <app-certified-table [certificados]="certificados"></app-certified-table>
 </div>
 
 <app-footer></app-footer>
