--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,12 +1,17 @@
 <div class="bg h-100">
   <div class="d-flex justify-content-center align-items-center">
     <div class="col-11 col-sm-6 card shadow p-3 mt-5">
-
       <div class="row">
-        <div class="col-12 col-sm-6 d-flex justify-content-center align-items-center">
-          <img src="assets/logo_200x200.jpg" alt="error" width="250px" class="rounded" />
+        <div
+          class="col-12 col-sm-6 d-flex justify-content-center align-items-center"
+        >
+          <img
+            src="assets/logo_200x200.jpg"
+            alt="error"
+            width="250px"
+            class="rounded"
+          />
         </div>
-
 
         <!--Login -->
         <div class="col-12 col-sm-6 p-3">
@@ -16,24 +21,47 @@
             </div>
 
             <form>
-              <input class="form-control mb-3" type="email" name="email" placeholder="Email" [(ngModel)]="user.email"
-                autofocus />
+              <input
+                class="form-control mb-3"
+                type="email"
+                name="email"
+                placeholder="Email"
+                [(ngModel)]="user.email"
+                autofocus
+              />
 
-              <input class="form-control mb-2" [type]="user.showPassword ? 'text' : 'password'" name="password"
-                placeholder="Contraseña" [(ngModel)]="user.password" />
+              <input
+                class="form-control mb-2"
+                [type]="user.showPassword ? 'text' : 'password'"
+                name="password"
+                placeholder="Contraseña"
+                [(ngModel)]="user.password"
+              />
 
-              <div class="alert alert-danger text-center" role="alert" *ngIf="showAlert">
+              <div
+                class="alert alert-danger text-center"
+                role="alert"
+                *ngIf="showAlert"
+              >
                 {{ alertMessage }}
               </div>
 
               <div class="form-check text-start mb-5">
                 <div class="d-flex align-items-center">
                   <div class="col-6">
-                    <input type="checkbox" class="form-check-input" id="checkLogin" [checked]="user.showPassword"
-                      (change)="user.showPassword = !user.showPassword" />
-                    <label class="form-check-label text-muted" for="checkLogin">Mostrar contraseña</label>
+                    <input
+                      type="checkbox"
+                      class="form-check-input"
+                      id="checkLogin"
+                      [checked]="user.showPassword"
+                      (change)="user.showPassword = !user.showPassword"
+                    />
+                    <label class="form-check-label text-muted" for="checkLogin"
+                      >Mostrar contraseña</label
+                    >
                   </div>
 
+                  <!-- TODO: Comentado hasta poder solucionar el problema de recupero de contraseña
                   <div class="col-6 text-end">
                     <span>
                       <a (click)="forgotPassword = true" (click)="forgotPassWordClicked()"
@@ -42,6 +70,7 @@
                       </a>
                     </span>
                   </div>
+                  -->
                 </div>
               </div>
 
@@ -52,12 +81,13 @@
               </div>
             </form>
 
-
-
             <div class="d-flex justify-content-center">
               <p class="forgot-password me-1">¿No tenés cuenta?</p>
-              <a class="text-secondary fw-bold link-underline-secondary link-underline-opacity-0"
-                routerLink="/signup">Registrate.</a>
+              <a
+                class="text-secondary fw-bold link-underline-secondary link-underline-opacity-0"
+                routerLink="/signup"
+                >Registrate.</a
+              >
             </div>
           </div>
 
@@ -71,18 +101,35 @@
             </div>
 
             <div class="form">
-              <input class="form-control mb-3" type="text" placeholder="Ingrese el código de verificación" name="code"
-                [(ngModel)]="user.code" />
+              <input
+                class="form-control mb-3"
+                type="text"
+                placeholder="Ingrese el código de verificación"
+                name="code"
+                [(ngModel)]="user.code"
+              />
 
-              <input class="form-control mb-1" [type]="user.showPassword ? 'text' : 'password'" name="newPassword"
-                placeholder="Ingrese una nueva Contraseña" [(ngModel)]="newPassword" />
+              <input
+                class="form-control mb-1"
+                [type]="user.showPassword ? 'text' : 'password'"
+                name="newPassword"
+                placeholder="Ingrese una nueva Contraseña"
+                [(ngModel)]="newPassword"
+              />
 
               <div class="form-check text-start mb-5">
                 <div class="d-flex align-items-center">
                   <div class="col-6">
-                    <input type="checkbox" class="form-check-input" id="checkForgot" [checked]="user.showPassword"
-                      (change)="user.showPassword = !user.showPassword" />
-                    <label class="form-check-label text-muted" for="checkForgot">Mostrar contraseña</label>
+                    <input
+                      type="checkbox"
+                      class="form-check-input"
+                      id="checkForgot"
+                      [checked]="user.showPassword"
+                      (change)="user.showPassword = !user.showPassword"
+                    />
+                    <label class="form-check-label text-muted" for="checkForgot"
+                      >Mostrar contraseña</label
+                    >
                   </div>
                 </div>
               </div>
@@ -96,20 +143,25 @@
 
             <div class="d-flex justify-content-center">
               <p class="forgot-password me-1">¿Tenés una cuenta?</p>
-              <a class="text-secondary fw-bold link-underline-secondary link-underline-opacity-0"
-                (click)="forgotPassword = false" style="cursor: pointer">Iniciar sesión.</a>
+              <a
+                class="text-secondary fw-bold link-underline-secondary link-underline-opacity-0"
+                (click)="forgotPassword = false"
+                style="cursor: pointer"
+                >Iniciar sesión.</a
+              >
             </div>
 
             <div class="d-flex justify-content-center">
               <p class="forgot-password me-1">¿No tenés cuenta?</p>
-              <a class="text-secondary fw-bold link-underline-secondary link-underline-opacity-0"
-                routerLink="/signup">Registrate.</a>
+              <a
+                class="text-secondary fw-bold link-underline-secondary link-underline-opacity-0"
+                routerLink="/signup"
+                >Registrate.</a
+              >
             </div>
           </div>
         </div>
       </div>
-
-
     </div>
   </div>
 
