--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="container h-100">
   <div class="mt-3 mt-sm-5 mb-sm-4">
-    <h1 class="fs-2">¡Bienvenid@, {{ userName }}!</h1>
+    <h1 class="fs-2">¡Bienvenido/a, {{ userName }}!</h1>
   </div>
 
   <div class="d-flex justify-content-end mt-3 mb-3">
