--- a/src/app/pages/show/show.component.html
+++ b/src/app/pages/show/show.component.html
@@ -29,21 +29,26 @@
       </div>
 
       <div class="col-3 mb-2">
-        Fecha primer parcial: {{ materia.fechaPrimerParcial }}
+        Fecha primer parcial:
+        {{ materia.fechaPrimerParcial | date : "dd/MM/YYYY" }}
       </div>
       <div class="col-9 mb-2">Nota: {{ materia.notaPrimerParcial }}</div>
 
       <div class="col-3 mb-2">
-        Fecha segundo parcial: {{ materia.fechaSegundoParcial }}
+        Fecha segundo parcial:
+        {{ materia.fechaSegundoParcial | date : "dd/MM/YYYY" }}
       </div>
       <div class="col-9 mb-2">Nota: {{ materia.notaSegundoParcial }}</div>
 
       <div class="col-3 mb-2">
-        Fecha recuperatorio: {{ materia.fechaRecuperatorio }}
+        Fecha recuperatorio:
+        {{ materia.fechaRecuperatorio | date : "dd/MM/YYYY" }}
       </div>
       <div class="col-9 mb-2">Nota: {{ materia.notaRecuperatorio }}</div>
 
-      <div class="col-3 mb-2">Fecha examen final: {{ materia.fechaFinal }}</div>
+      <div class="col-3 mb-2">
+        Fecha examen final: {{ materia.fechaFinal | date : "dd/MM/YYYY" }}
+      </div>
       <div class="col-9 mb-2">Nota: {{ materia.notaFinal }}</div>
 
       <hr />
