se agrega el link en el header para autorizar constancias segun perfil admin

--- a/src/app/pages/error401/error401.component.html
+++ b/src/app/pages/error401/error401.component.html
@@ -13,6 +13,6 @@
   </div>
 
   <div class="d-grid gap-2 col-2 mx-auto">
-    <a routerLink="/" class="btn btn-danger">volver</a>
+    <button class="btn btn-danger" (click)="goBack()">volver</button>
   </div>
 </div>
