--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -34,6 +34,16 @@
             <li><i class="bi bi-file-text"></i> Constancias</li></a
           >
         </li>
+        <li>
+          <a
+            class="dropdown-item"
+            (click)="redirectToAuthorizations()"
+            style="cursor: pointer"
+          >
+            <li><i class="bi bi-clipboard2-check"></i> Autorizaciones</li>
+          </a>
+        </li>
+
         <li><hr class="dropdown-divider" /></li>
         <li>
           <a class="dropdown-item" (click)="signOut()" style="cursor: pointer">
