--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -28,6 +28,15 @@
         <li>
           <a
             class="dropdown-item"
+            routerLink="/subjects"
+            style="cursor: pointer"
+          >
+            <li><i class="bi bi-bookmark-star"></i> Mis materias</li></a
+          >
+        </li>
+        <li>
+          <a
+            class="dropdown-item"
             routerLink="/certifieds"
             style="cursor: pointer"
           >
