--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,37 +1,53 @@
-<app-header></app-header>
-<div class="container h-100">
-  <div class="mt-3 mt-sm-5 mb-sm-4">
-    <h1 class="fs-2">¡Bienvenido/a, {{ userName }}!</h1>
-  </div>
+<div class="h-100">
+  <app-header></app-header>
+  <div class="imagen-fluid"></div>
+  <div class="container">
+    <div class="mt-3 mt-sm-5 mb-sm-4">
+      <h1 class="mt-5 fs-2">¡Bienvenido/a, {{ userName }}!</h1>
+    </div>
+    <div class="row mt-5">
+      <div class="col-sm-3 mb-3 mb-sm-0">
+        <a
+          class="link-underline link-underline-opacity-0"
+          routerLink="/subjects"
+        >
+          <div class="card bg-primary text-light">
+            <div class="card-body">
+              <h2 class="card-title">Materias en curso</h2>
+              <p class="fs-1 card-text text-end m-3">0</p>
+            </div>
+          </div>
+        </a>
+      </div>
 
-  <div class="d-flex justify-content-end mt-3 mb-3">
-    <a routerLink="/create" mat-raised-button>
-      <span>
-        <i class="bi bi-plus-circle"></i>
-      </span>
-      Agregar materia
-    </a>
-  </div>
+      <div class="col-sm-3 mb-3 mb-sm-0">
+        <a
+          class="link-underline link-underline-opacity-0"
+          routerLink="/certifieds"
+        >
+          <div class="card bg-success text-light">
+            <div class="card-body">
+              <h2 class="card-title">Constancias pendientes</h2>
+              <p class="fs-1 card-text text-end m-3">0</p>
+            </div>
+          </div>
+        </a>
+      </div>
 
-  <ng-container *ngIf="isLoading; else dataLoaded">
-    <!-- Mostrar el spinner de carga -->
-    <div class="text-center">
-      <div class="spinner-border text-secondary" role="status">
-        <span class="visually-hidden">Cargando...</span>
+      <div class="col-sm-3 mb-3 mb-sm-0">
+        <a
+          class="link-underline link-underline-opacity-0"
+          (click)="redirectToAuthorizations()"
+        >
+          <div class="card bg-danger text-light">
+            <div class="card-body">
+              <h2 class="card-title">Autorizaciones pendientes</h2>
+              <p class="fs-1 card-text text-end m-3">0</p>
+            </div>
+          </div>
+        </a>
       </div>
     </div>
-  </ng-container>
-
-  <ng-template #dataLoaded>
-    <ng-container *ngIf="materias.length > 0; else noMateriasMessage">
-      <app-subject-table [materias]="materias"></app-subject-table>
-    </ng-container>
-
-    <ng-template #noMateriasMessage>
-      <div class="card shadow p-5 text-center text-success">
-        <h3>Agrega algunas materias para comenzar 😊</h3>
-      </div>
-    </ng-template>
-  </ng-template>
+  </div>
 </div>
 <app-footer></app-footer>
