--- a/src/app/pages/show/show.component.html
+++ b/src/app/pages/show/show.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container" *ngIf="materia">
+<div class="container h-100" *ngIf="materia">
   <div class="d-flex align-items-center mt-3 mt-sm-5 mb-sm-4">
     <h1 class="fs-2">{{ materia.materia }}</h1>
     <a
