se crean los guard para gestionar el acceso a las rutas

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -46,7 +46,7 @@
         <li>
           <a
             class="dropdown-item"
-            (click)="redirectToAuthorizations()"
+            routerLink="/admin-certified"
             style="cursor: pointer"
           >
             <li><i class="bi bi-clipboard2-check"></i> Autorizaciones</li>
