--- a/src/app/pages/error401/error401.component.html
+++ b/src/app/pages/error401/error401.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container h-100">
   <div class="d-flex">
     <img
@@ -13,6 +14,6 @@
   </div>
 
   <div class="d-grid gap-2 col-2 mx-auto">
-    <button class="btn btn-danger" (click)="goBack()">volver</button>
+    <a routerLink="/" class="btn btn-danger">volver</a>
   </div>
 </div>
