Se genera la funcionalidad basica para impresion de constancias

--- a/src/app/components/certified-form/certified-form.component.html
+++ b/src/app/components/certified-form/certified-form.component.html
@@ -9,13 +9,13 @@
           formControlName="tipoConstancia"
           required
         >
-          <option value="Constancia de alumno regular">
+          <option value="CONSTANCIA DE ALUMNO REGULAR">
             CONSTANCIA DE ALUMNO REGULAR
           </option>
-          <option value="Constancia de inscripción">
+          <option value="CONSTANCIA DE INSCRIPCIÓN">
             CONSTANCIA DE INSCRIPCIÓN
           </option>
-          <option value="Constancia de examen">CONSTANCIA DE EXAMEN</option>
+          <option value="CONSTANCIA DE EXAMEN">CONSTANCIA DE EXAMEN</option>
         </select>
       </div>
     </div>
@@ -95,13 +95,15 @@
           formControlName="carrera"
           required
         >
-          <option value="Analisis">
+          <option value="Tecnicatura Superior en Análisis de Sistemas">
             TECNICATURA SUPERIOR EN ANÁLISIS DE SISTEMAS
           </option>
-          <option value="CDsIA">
+          <option
+            value="Tecnicatura Superior en Ciencia de Datos e Inteligencia Artificial"
+          >
             TECNICATURA SUPERIOR EN CIENCIA DE DATOS E IA
           </option>
-          <option value="Desarrollo">
+          <option value="Tecnicatura superior en Desarrollo de Software">
             TECNICATURA SUPERIOR EN DESARROLLO DE SOFTWARE
           </option>
         </select>
