--- a/src/app/components/certified-table/certified-table.component.html
+++ b/src/app/components/certified-table/certified-table.component.html
@@ -25,9 +25,9 @@
           </span>
         </td>
         <td>
-          <a class="btn btn-sm">
+          <button class="btn btn-sm" (click)="generatePDF(certificado)">
             <i class="bi bi-printer text-muted"></i>
-          </a>
+          </button>
         </td>
       </tr>
     </tbody>
