Integracion con imagenes almacenadas en Amazon S3

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,8 +2,7 @@
   <div class="container">
     <a routerLink="/home" class="navbar-brand">
       <img
-        src="/assets/logo_200x200.jpg"
-        alt="Notazero"
+        src="https://notazer0.s3.amazonaws.com/logo_200x200.jpg"
         width="60"
         height="60"
         class="rounded-circle"
