--- a/src/app/pages/error401/error401.component.html
+++ b/src/app/pages/error401/error401.component.html
@@ -2,7 +2,7 @@
 <div class="container h-100">
   <div class="d-flex">
     <img
-      src="/assets/error401.jpg"
+      src="https://notazer0.s3.amazonaws.com/error401.jpg"
       class="img-fluid mx-auto mt-5"
       width="800"
       alt="error-401"
