--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@
           class="col-12 col-sm-6 d-flex justify-content-center align-items-center"
         >
           <img
-            src="assets/logo_200x200.jpg"
+            src="https://notazer0.s3.amazonaws.com/logo_200x200.jpg"
             alt="error"
             width="250px"
             class="rounded"
