--- a/src/app/components/certified-form/certified-form.component.html
+++ b/src/app/components/certified-form/certified-form.component.html
@@ -1,4 +1,4 @@
-<div class="card shadow p-5">
+<div class="card shadow p-5 mb-5">
   <form [formGroup]="certificadosForm" (ngSubmit)="onSubmit()" class="p-3">
     <div class="row mb-3">
       <label class="col col-form-label">Tipo de constancia:</label>
