--- a/src/app/pages/create-certified/create-certified.component.html
+++ b/src/app/pages/create-certified/create-certified.component.html
@@ -1,11 +1,11 @@
 <app-header></app-header>
+<div class="content-container">
+  <div class="container h-100">
+    <div class="mt-3 mt-sm-5 mb-sm-4">
+      <h1 class="fs-2">Solicitar constancia</h1>
+    </div>
 
-<div class="container h-100">
-  <div class="mt-3 mt-sm-5 mb-sm-4">
-    <h1 class="fs-2">Solicitar constancia</h1>
+    <app-certified-form (submitValues)="onSubmit($event)"></app-certified-form>
   </div>
-
-  <app-certified-form (submitValues)="onSubmit($event)"></app-certified-form>
 </div>
-
 <app-footer></app-footer>
