--- a/src/app/pages/edit-subject/edit-subject.component.html
+++ b/src/app/pages/edit-subject/edit-subject.component.html
@@ -1,14 +1,15 @@
 <app-header></app-header>
-<div class="container h-100">
-  <div class="mt-3 mt-sm-5 mb-sm-4">
-    <h1 class="fs-2">Editar materia</h1>
+<div class="content-container">
+  <div class="container h-100">
+    <div class="mt-3 mt-sm-5 mb-sm-4">
+      <h1 class="fs-2">Editar materia</h1>
 
-    <app-subject-form
-      *ngIf="materia"
-      [modelMaterias]="materia"
-      (submitValues)="onSubmit($event)"
-    ></app-subject-form>
+      <app-subject-form
+        *ngIf="materia"
+        [modelMaterias]="materia"
+        (submitValues)="onSubmit($event)"
+      ></app-subject-form>
+    </div>
   </div>
 </div>
-
 <app-footer></app-footer>
