--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,6 @@
-<div class="h-100">
-  <app-header></app-header>
-  <div class="imagen-fluid"></div>
-  <div class="container">
+<app-header></app-header>
+<div class="content-container">
+  <div class="container h-100">
     <div class="mt-3 mt-sm-5 mb-sm-4">
       <h1 class="mt-5 fs-2">¡Bienvenido/a, {{ userName }}!</h1>
     </div>
@@ -50,4 +49,5 @@
     </div>
   </div>
 </div>
+
 <app-footer></app-footer>
