--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,8 @@
-<div class="bg h-100">
+<div
+  class="bg-dark-subtle h-100 d-flex align-items-center justify-content-center"
+>
   <div class="d-flex justify-content-center align-items-center">
-    <div class="col-11 col-sm-6 card shadow p-3 mt-5">
+    <div class="col-12 card shadow p-3">
       <div class="row">
         <div
           class="col-12 col-sm-6 d-flex justify-content-center align-items-center"
@@ -17,7 +19,7 @@
         <div class="col-12 col-sm-6 p-3">
           <div [hidden]="forgotPassword">
             <div class="card-header text-center mb-3">
-              <h3>Debes iniciar sesión para continuar</h3>
+              <h3>Inicia sesión para continuar</h3>
             </div>
 
             <form>
@@ -48,7 +50,7 @@
 
               <div class="form-check text-start mb-5">
                 <div class="d-flex align-items-center">
-                  <div class="col-6">
+                  <div class="col-8">
                     <input
                       type="checkbox"
                       class="form-check-input"
