--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,12 +1,14 @@
-<div class="bg h-100">
+<div
+  class="bg-dark-subtle h-100 d-flex align-items-center justify-content-center"
+>
   <div class="d-flex justify-content-center align-items-center">
-    <div class="col-11 col-sm-6 card shadow p-3 mt-5">
+    <div class="col-12 card shadow p-3">
       <div class="row">
         <div
           class="col-12 col-sm-6 d-flex justify-content-center align-items-center"
         >
           <img
-            src="assets/logo_200x200.jpg"
+            src="https://notazer0.s3.amazonaws.com/logo_200x200.jpg"
             alt="error"
             width="250px"
             class="rounded"
