--- a/src/app/pages/subjects/subjects.component.html
+++ b/src/app/pages/subjects/subjects.component.html
@@ -1,6 +1,6 @@
-<div class="h-100">
-  <app-header></app-header>
-  <div class="container">
+<app-header></app-header>
+<div class="content-container">
+  <div class="container h-100">
     <div class="mt-3 mt-sm-5">
       <h1 class="fs-2">Mis Materias</h1>
     </div>
@@ -36,4 +36,5 @@
     </ng-template>
   </div>
 </div>
+
 <app-footer></app-footer>
