--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,49 +4,7 @@
     <div class="mt-3 mt-sm-5 mb-sm-4">
       <h1 class="mt-5 fs-2">¡Bienvenido/a, {{ userName }}!</h1>
     </div>
-    <div class="row mt-5">
-      <div class="col-sm-4 mb-3 mb-sm-0">
-        <a
-          class="link-underline link-underline-opacity-0"
-          routerLink="/subjects"
-        >
-          <div class="card bg-primary text-light">
-            <div class="card-body">
-              <h2 class="card-title">Materias en curso</h2>
-              <p class="fs-1 card-text text-end m-3">0</p>
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-sm-4 mb-3 mb-sm-0">
-        <a
-          class="link-underline link-underline-opacity-0"
-          routerLink="/certifieds"
-        >
-          <div class="card bg-success text-light">
-            <div class="card-body">
-              <h2 class="card-title">Constancias pendientes</h2>
-              <p class="fs-1 card-text text-end m-3">0</p>
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-sm-4 mb-3 mb-sm-0">
-        <a
-          class="link-underline link-underline-opacity-0"
-          (click)="redirectToAuthorizations()"
-        >
-          <div class="card bg-danger text-light">
-            <div class="card-body">
-              <h2 class="card-title">Autorizaciones pendientes</h2>
-              <p class="fs-1 card-text text-end m-3">0</p>
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
+    <app-dashboard></app-dashboard>
   </div>
 </div>
 
